# reading-book-api

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs
src/api/: mod.rs  protocols.rs  routes.rs
src/cli/: cli.rs
src/model/: book.rs  mod.rs  params.rs
